--- a/spark-app/pom.xml
+++ b/spark-app/pom.xml
@@ -177,7 +177,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.kong.spark.FirstApp</mainClass>
+                                    <mainClass>com.kong.spark.rdd.CUAnalysis</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
